fix line breaks around <pre>s

--- a/text/Moby-Dick.html
+++ b/text/Moby-Dick.html
@@ -278,8 +278,7 @@ Gondibert.</cite></p>
 Hosmannus in his work of thirty years, saith plainly, Nescio quid sit."
 <cite>—Sir T. Browne. Of Sperma Ceti and the Sperma Ceti Whale. Vide his V. E.</cite></p>
 <blockquote class="fixed">
-  <pre>
- “Like Spencer’s Talus with his modern flail
+  <pre> “Like Spencer’s Talus with his modern flail
   He threatens ruin with his ponderous tail.
 ...
   Their fixed jav’lins in his side he wears,
