--- a/text/The_Jungle_Book.html
+++ b/text/The_Jungle_Book.html
@@ -25,8 +25,7 @@
 <section id="2H_4_0001">
 <h2>Mowgli’s Brothers</h2>
 <blockquote class="fixed poem">
-<pre>
-Now Rann the Kite brings home the night
+<pre>Now Rann the Kite brings home the night
    That Mang the Bat sets free—
 The herds are shut in byre and hut
    For loosed till dawn are we.
@@ -34,8 +33,7 @@ This is the hour of pride and power,
    Talon and tush and claw.
 Oh, hear the call!—Good hunting all
    That keep the Jungle Law!
-Night-Song in the Jungle
-</pre>
+Night-Song in the Jungle</pre>
 </blockquote>
 <p>It was seven o’clock of a very warm evening in the Seeonee hills when
 Father Wolf woke up from his day’s rest, scratched himself, yawned, and
@@ -652,8 +650,7 @@ alone, to meet those mysterious things that are called men.</p>
 <section id="2H_4_0002">
 <h2>Hunting-Song of the Seeonee Pack</h2>
 <blockquote class="fixed poem">
-<pre>
-As the dawn was breaking the Sambhur belled
+<pre>As the dawn was breaking the Sambhur belled
    Once, twice and again!
 And a doe leaped up, and a doe leaped up
 From the pond in the wood where the wild deer sup.
@@ -673,15 +670,13 @@ Feet in the jungle that leave no mark!
 
 Eyes that can see in the dark—the dark!
 Tongue—give tongue to it!  Hark!  O hark!
-   Once, twice and again!
-</pre>
+   Once, twice and again!</pre>
 </blockquote>
 </section>
 <section id="2H_4_0003">
 <h2>Kaa’s Hunting</h2>
 <blockquote class="fixed poem">
-<pre>
-His spots are the joy of the Leopard: his horns are the
+<pre>His spots are the joy of the Leopard: his horns are the
    Buffalo’s pride.
 Be clean, for the strength of the hunter is known by the
    gloss of his hide.
@@ -697,8 +692,7 @@ For though they are little and fubsy, it may be the Bear is
    earliest kill;
 But the jungle is large and the Cub he is small.  Let him
    think and be still.
-                            Maxims of Baloo
-</pre>
+                            Maxims of Baloo</pre>
 </blockquote>
 <p>All that is told here happened some time before Mowgli was turned out of
 the Seeonee Wolf Pack, or revenged himself on Shere Khan the tiger. It
@@ -1455,8 +1449,7 @@ never waked when he was put down in the home-cave.</p>
 <section id="2H_4_0004">
 <h2>Road-Song of the Bandar-Log</h2>
 <blockquote class="fixed poem">
-<pre>
-Here we go in a flung festoon,
+<pre>Here we go in a flung festoon,
 Half-way up to the jealous moon!
 Don’t you envy our pranceful bands?
 Don’t you wish you had extra hands?
@@ -1488,23 +1481,20 @@ Now we are talking just like men!
 Then join our leaping lines that scumfish through the pines,
 That rocket by where, light and high, the wild grape swings.
 By the rubbish in our wake, and the noble noise we make,
-Be sure, be sure, we’re going to do some splendid things!
-</pre>
+Be sure, be sure, we’re going to do some splendid things!</pre>
 </blockquote>
 </section>
 <section id="2H_4_0005">
 <h2>“Tiger! Tiger!”</h2>
 <blockquote class="fixed poem">
-<pre>
-What of the hunting, hunter bold?
+<pre>What of the hunting, hunter bold?
    Brother, the watch was long and cold.
 What of the quarry ye went to kill?
    Brother, he crops in the jungle still.
 Where is the power that made your pride?
    Brother, it ebbs from my flank and side.
 Where is the haste that ye hurry by?
-   Brother, I go to my lair—to die.
-</pre>
+   Brother, I go to my lair—to die.</pre>
 </blockquote>
 <p>Now we must go back to the first tale. When Mowgli left the wolf’s cave
 after the fight with the Pack at the Council Rock, he went down to the
@@ -2032,8 +2022,7 @@ became a man and married.</p>
 <blockquote class="fixed poem">
 <p><strong>That he sang at the council rock when he
 danced on Shere Khan’s hide</strong></p>
-<pre>
-The Song of Mowgli—I, Mowgli, am singing.  Let the jungle
+<pre>The Song of Mowgli—I, Mowgli, am singing.  Let the jungle
    listen to the things I have done.
 
 Shere Khan said he would kill—would kill!  At the gates in the
@@ -2114,23 +2103,20 @@ I am two Mowglis, but the hide of Shere Khan is under my feet.
 All the jungle knows that I have killed Shere Khan.  Look—look
    well, O Wolves!
 
-Ahae!  My heart is heavy with the things that I do not understand.
-</pre>
+Ahae!  My heart is heavy with the things that I do not understand.</pre>
 </blockquote>
 </section>
 <section id="2H_4_0007">
 <h2>The White Seal</h2>
 <blockquote class="fixed poem">
-<pre>
-Oh! hush thee, my baby, the night is behind us,
+<pre>Oh! hush thee, my baby, the night is behind us,
    And black are the waters that sparkled so green.
 The moon, o’er the combers, looks downward to find us
    At rest in the hollows that rustle between.
 Where billow meets billow, then soft be thy pillow,
    Ah, weary wee flipperling, curl at thy ease!
 The storm shall not wake thee, nor shark overtake thee,
-   Asleep in the arms of the slow-swinging seas!
-</pre>
+   Asleep in the arms of the slow-swinging seas!</pre>
 <p class="signature">Seal Lullaby</p>
 </blockquote>
 <p>All these things happened several years ago at a place called
@@ -2223,8 +2209,7 @@ been such a thing in the world as a white seal.”</p>
 sang the low, crooning seal song that all the mother seals sing to their
 babies:</p>
 <blockquote class="fixed poem">
-<pre>
-You mustn’t swim till you’re six weeks old,
+<pre>You mustn’t swim till you’re six weeks old,
    Or your head will be sunk by your heels;
 And summer gales and Killer Whales
    Are bad for baby seals.
@@ -2233,8 +2218,7 @@ Are bad for baby seals, dear rat,
    As bad as bad can be;
 But splash and grow strong,
 And you can’t be wrong.
-   Child of the Open Sea!
-</pre>
+   Child of the Open Sea!</pre>
 </blockquote>
 <p>Of course the little fellow did not understand the words at first. He
 paddled and scrambled about by his mother’s side, and learned to scuffle
@@ -2723,8 +2707,7 @@ holluschickie play around him, in that sea where no man comes.</p>
 they are heading back to their beaches in the summer. It is a sort of
 very sad seal National Anthem.</p>
 <blockquote class="fixed poem">
-<pre>
-I met my mates in the morning (and, oh, but I am old!)
+<pre>I met my mates in the morning (and, oh, but I am old!)
 Where roaring on the ledges the summer ground-swell rolled;
 I heard them lift the chorus that drowned the breakers’ song—
 The Beaches of Lukannon—two million voices strong.
@@ -2752,15 +2735,13 @@ And still we sing Lukannon—before the sealers came.
 Wheel down, wheel down to southward; oh, Gooverooska, go!
 And tell the Deep-Sea Viceroys the story of our woe;
 Ere, empty as the shark’s egg the tempest flings ashore,
-The Beaches of Lukannon shall know their sons no more!
-</pre>
+The Beaches of Lukannon shall know their sons no more!</pre>
 </blockquote>
 </section>
 <section id="2H_4_0009">
 <h2>“Rikki-Tikki-Tavi”</h2>
 <blockquote class="fixed poem">
-<pre>
-At the hole where he went in
+<pre>At the hole where he went in
 Red-Eye called to Wrinkle-Skin.
 Hear what little Red-Eye saith:
 “Nag, come up and dance with death!”
@@ -2772,8 +2753,7 @@ This shall end when one is dead;
 Turn for turn and twist for twist—
    (Run and hide thee, Nag.)
 Hah!  The hooded Death has missed!
-   (Woe betide thee, Nag!)
-</pre>
+   (Woe betide thee, Nag!)</pre>
 </blockquote>
 <p>This is the story of the great war that Rikki-tikki-tavi fought
 single-handed, through the bath-rooms of the big bungalow in Segowlee
@@ -3265,8 +3245,7 @@ inside the walls.</p>
 <h2>Darzee’s Chant</h2>
 <blockquote class="fixed poem">
 <p>(Sung in honor of Rikki-tikki-tavi)</p>
-<pre>
-Singer and tailor am I—
+<pre>Singer and tailor am I—
    Doubled the joys that I know—
 Proud of my lilt to the sky,
    Proud of the house that I sew—
@@ -3292,8 +3271,7 @@ Give him the Thanks of the Birds,
 Praise him with nightingale words—
    Nay, I will praise him instead.
 Hear!  I will sing you the praise of the bottle-tailed Rikki, with
-eyeballs of red!
-</pre>
+eyeballs of red!</pre>
 <p>(Here Rikki-tikki interrupted, and the rest of the song is
 lost.)</p>
 </blockquote>
@@ -3301,8 +3279,7 @@ lost.)</p>
 <section id="2H_4_0011">
 <h2>Toomai of the Elephants</h2>
 <blockquote class="fixed poem">
-<pre>
-I will remember what I was, I am sick of rope and chain—
+<pre>I will remember what I was, I am sick of rope and chain—
    I will remember my old strength and all my forest affairs.
 I will not sell my back to man for a bundle of sugar-cane:
    I will go out to my own kind, and the wood-folk in their lairs.
@@ -3310,8 +3287,7 @@ I will not sell my back to man for a bundle of sugar-cane:
 I will go out until the day, until the morning break—
    Out to the wind’s untainted kiss, the water’s clean caress;
 I will forget my ankle-ring and snap my picket stake.
-   I will revisit my lost loves, and playmates masterless!
-</pre>
+   I will revisit my lost loves, and playmates masterless!</pre>
 </blockquote>
 <p>Kala Nag, which means Black Snake, had served the Indian Government in
 every way that an elephant could serve it for forty-seven years, and as
@@ -3617,16 +3593,14 @@ his small brother to sleep with an old, old song about the great God
 Shiv, who once told all the animals what they should eat. It is a very
 soothing lullaby, and the first verse says:</p>
 <blockquote class="fixed poem">
-<pre>
-Shiv, who poured the harvest and made the winds to blow,
+<pre>Shiv, who poured the harvest and made the winds to blow,
 Sitting at the doorways of a day of long ago,
 Gave to each his portion, food and toil and fate,
 From the King upon the guddee to the Beggar at the gate.
    All things made he—Shiva the Preserver.
 Mahadeo!  Mahadeo!  He made all—
 Thorn for the camel, fodder for the kine,
-And mother’s heart for sleepy head, O little son of mine!
-</pre>
+And mother’s heart for sleepy head, O little son of mine!</pre>
 </blockquote>
 <p>Little Toomai came in with a joyous tunk-a-tunk at the end of each
 verse, till he felt sleepy and stretched himself on the fodder at Kala
@@ -3912,8 +3886,7 @@ the heart of the Garo hills!</p>
 <h2>Shiv and the Grasshopper</h2>
 <blockquote class="fixed poem">
 <p>(The song that Toomai’s mother sang to the baby)</p>
-<pre>
-Shiv, who poured the harvest and made the winds to blow,
+<pre>Shiv, who poured the harvest and made the winds to blow,
 Sitting at the doorways of a day of long ago,
 Gave to each his portion, food and toil and fate,
 From the King upon the guddee to the Beggar at the gate.
@@ -3946,19 +3919,16 @@ Who hath surely given meat to all that live.
    All things made he—Shiva the Preserver.
    Mahadeo!  Mahadeo!  He made all,—
    Thorn for the camel, fodder for the kine,
-   And mother’s heart for sleepy head, O little son of mine!
-</pre>
+   And mother’s heart for sleepy head, O little son of mine!</pre>
 </blockquote>
 </section>
 <section id="2H_4_0013">
 <h2>Her Majesty’s Servants</h2>
 <blockquote class="fixed poem">
-<pre>
-You can work it out by Fractions or by simple Rule of Three,
+<pre>You can work it out by Fractions or by simple Rule of Three,
 But the way of Tweedle-dum is not the way of Tweedle-dee.
 You can twist it, you can turn it, you can plait it till you drop,
-But the way of Pilly Winky’s not the way of Winkie Pop!
-</pre>
+But the way of Pilly Winky’s not the way of Winkie Pop!</pre>
 </blockquote>
 <p>It had been raining heavily for one whole month—raining on a camp
 of thirty thousand men and thousands of camels, elephants, horses,
@@ -4434,14 +4404,12 @@ began to play all together. That was the end of the review, and the
 regiments went off to their camps in the rain, and an infantry band
 struck up with—</p>
 <blockquote class="fixed poem">
-<pre>
-The animals went in two by two,
+<pre>The animals went in two by two,
      Hurrah!
 The animals went in two by two,
 The elephant and the battery mul’,
 and they all got into the Ark
-     For to get out of the rain!
-</pre>
+     For to get out of the rain!</pre>
 </blockquote>
 <p>Then I heard an old grizzled, long-haired Central Asian chief, who had
 come down with the Amir, asking questions of a native officer.</p>
@@ -4463,8 +4431,7 @@ Viceroy.”</p>
 <section id="2H_4_0014">
 <h2>Parade Song of the Camp Animals</h2>
 <blockquote class="fixed poem">
-<pre>
-<strong>Elephants of the gun teams</strong>
+<pre><strong>Elephants of the gun teams</strong>
 
 We lent to Alexander the strength of Hercules,
 The wisdom of our foreheads, the cunning of our knees;
@@ -4539,7 +4506,6 @@ March and suffer day by day.
    Children of the Camp are we,
    Serving each in his degree;
    Children of the yoke and goad,
-   Pack and harness, pad and load!
-</pre>
+   Pack and harness, pad and load!</pre>
 </blockquote>
 </section>
