normalize <p> tag whitespace

--- a/text/A_Christmas_Carol.html
+++ b/text/A_Christmas_Carol.html
@@ -6,19 +6,14 @@
 </header>
 <section class="preface">
 <h2>Preface</h2>
-<p>
-I <strong>have</strong> endeavoured in this Ghostly little book,
+<p>I <strong>have</strong> endeavoured in this Ghostly little book,
 to raise the Ghost of an Idea, which shall not put my
 readers out of humour with themselves, with each other,
 with the season, or with me.  May it haunt their houses
-pleasantly, and no one wish to lay it.
-</p>
-<p>
-Their faithful Friend and Servant,
-</p>
+pleasantly, and no one wish to lay it.</p>
+<p>Their faithful Friend and Servant,</p>
 <p class="signature">C. D.<br/>
-December, 1843.
-</p>
+December, 1843.</p>
 </section>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
@@ -555,8 +550,7 @@ him; Marley’s Ghost!” and fell again.</p>
 <img src="images/A_Christmas_Carol/01.jpg" alt="Illustration of Marley’s Ghost" />
 <figcaption>Marley’s Ghost</figcaption>
 </figure>
-<p>
-The same face: the very same. Marley in his pigtail,
+<p>The same face: the very same. Marley in his pigtail,
 usual waistcoat, tights and boots; the tassels on
 the latter bristling, like his pigtail, and his coat-skirts,
 and the hair upon his head. The chain he drew was
@@ -813,8 +807,7 @@ human matters, and had lost the power for ever.</p>
 <img src="images/A_Christmas_Carol/02.jpg" alt="Illustration of Ghosts of Departed Usurers" />
 <figcaption>Ghosts of Departed Usurers</figcaption>
 </figure>
-<p>
-Whether these creatures faded into mist, or mist
+<p>Whether these creatures faded into mist, or mist
 enshrouded them, he could not tell. But they and
 their spirit voices faded together; and the night became
 as it had been when he walked home.</p>
@@ -828,14 +821,12 @@ of the day, or his glimpse of the Invisible World, or
 the dull conversation of the Ghost, or the lateness of
 the hour, much in need of repose; went straight to
 bed, without undressing, and fell asleep upon the
-instant.
-</p>
+instant.</p>
 </section>
 <section id="s2">
 <h2>Stave Two.</h2>
 <h3>The First of the Three Spirits.</h3>
-<p>
-When Scrooge awoke, it was so dark, that looking out of bed,
+<p>When Scrooge awoke, it was so dark, that looking out of bed,
 he could scarcely distinguish the transparent window from
 the opaque walls of his chamber. He was endeavouring to
 pierce the darkness with his ferret eyes, when the chimes of a
