--- a/text/Alices_Adventures_in_Wonderland.html
+++ b/text/Alices_Adventures_in_Wonderland.html
@@ -2230,38 +2230,24 @@ now and then treading on her toes when they passed too close, and
 waving their forepaws to mark the time, while the Mock Turtle
 sang this, very slowly and sadly:—</p>
 <blockquote class="slanted poem">
-  <p>
-    ‘ “Will you walk a little faster?” said a whiting to a snail.<br/>
-    “There’s a porpoise close behind us, and he’s treading on my tail.
-  </p>
-  <p>
-    See how eagerly the lobsters and the turtles all advance!<br/>
-    They are waiting on the shingle—will you come and join the dance?
-  </p>
-  <p>
-    Will you, won’t you, will you, won’t you, will you join the dance?<br/>
-    Will you, won’t you, will you, won’t you, won’t you join the dance?
-  </p>
-  <p>
-    “You can really have no notion how delightful it will be<br/>
+  <p>‘ “Will you walk a little faster?” said a whiting to a snail.<br/>
+    “There’s a porpoise close behind us, and he’s treading on my tail.</p>
+  <p>See how eagerly the lobsters and the turtles all advance!<br/>
+    They are waiting on the shingle—will you come and join the dance?</p>
+  <p>Will you, won’t you, will you, won’t you, will you join the dance?<br/>
+    Will you, won’t you, will you, won’t you, won’t you join the dance?</p>
+  <p>“You can really have no notion how delightful it will be<br/>
     When they take us up and throw us, with the lobsters, out to sea!”<br/>
     But the snail replied “Too far, too far!” and gave a look askance—<br/>
-    Said he thanked the whiting kindly, but he would not join the dance.
-  </p>
-  <p>
-    Would not, could not, would not, could not, would not join the dance.<br/>
-    Would not, could not, would not, could not, could not join the dance.
-  </p>
-  <p>
-    ‘ “What matters it how far we go?” his scaly friend replied.<br/>
+    Said he thanked the whiting kindly, but he would not join the dance.</p>
+  <p>Would not, could not, would not, could not, would not join the dance.<br/>
+    Would not, could not, would not, could not, could not join the dance.</p>
+  <p>‘ “What matters it how far we go?” his scaly friend replied.<br/>
     “There is another shore, you know, upon the other side.<br/>
     The further off from England the nearer is to France—<br/>
-    Then turn not pale, beloved snail, but come and join the dance.
-  </p>
-  <p>
-    Will you, won’t you, will you, won’t you, will you join the dance?<br/>
-    Will you, won’t you, will you, won’t you, won’t you join the dance?” ’
-  </p>
+    Then turn not pale, beloved snail, but come and join the dance.</p>
+  <p>Will you, won’t you, will you, won’t you, will you join the dance?<br/>
+    Will you, won’t you, will you, won’t you, won’t you join the dance?” ’</p>
 </blockquote>
 <p>‘Thank you, it’s a very interesting dance to watch,’ said
 Alice, feeling very glad that it was over at last: ‘and I do so
@@ -2347,19 +2333,15 @@ However, she got up, and began to repeat it, but her head was so
 full of the Lobster Quadrille, that she hardly knew what she was
 saying, and the words came very queer indeed:—</p>
 <blockquote class="poem">
-  <p>
-    ‘’Tis the voice of the Lobster; I heard him declare,<br/>
+  <p>‘’Tis the voice of the Lobster; I heard him declare,<br/>
     “You have baked me too brown, I must sugar my hair.”<br/>
     As a duck with its eyelids, so he with his nose<br/>
-    Trims his belt and his buttons, and turns out his toes.’
-  </p>
-  <p>
-     [later editions continued as follows<br/>
+    Trims his belt and his buttons, and turns out his toes.’</p>
+  <p>[later editions continued as follows<br/>
     When the sands are all dry, he is gay as a lark,<br/>
     And will talk in contemptuous tones of the Shark,<br/>
-    But, when the tide rises and sharks are around,
-    <br/>His voice has a timid and tremulous sound.]
-  </p>
+    But, when the tide rises and sharks are around,<br/>
+    His voice has a timid and tremulous sound.]</p>
 </blockquote>
 <p>‘That’s different from what I used to say when I was a child,’
 said the Gryphon.</p>
@@ -2382,19 +2364,15 @@ subject.</p>
 <p>Alice did not dare to disobey, though she felt sure it would
 all come wrong, and she went on in a trembling voice:—</p>
 <blockquote class="poem">
-  <p>
-    ‘I passed by his garden, and marked, with one eye,<br/>
-    How the Owl and the Panther were sharing a pie—’
-  </p>
-  <p>
-    [later editions continued as follows:
+  <p>‘I passed by his garden, and marked, with one eye,<br/>
+    How the Owl and the Panther were sharing a pie—’</p>
+  <p>[later editions continued as follows:
     The Panther took pie-crust, and gravy, and meat,<br/>
     While the Owl had the dish as its share of the treat.<br/>
     When the pie was all finished, the Owl, as a boon,<br/>
     Was kindly permitted to pocket the spoon:<br/>
     While the Panther received knife and fork with a growl,<br/>
-    And concluded the banquet—]
-  </p>
+    And concluded the banquet—]</p>
 </blockquote>
 <p>‘What <em>is</em> the use of repeating all that stuff,’ the Mock Turtle
 interrupted, ‘if you don’t explain it as you go on? It’s by far
