--- a/text/Peter_Pan.html
+++ b/text/Peter_Pan.html
@@ -1333,12 +1333,10 @@ together in an apologetic sort of way.</p>
 for things go briskly on the island, come the pirates on their track. We
 hear them before they are seen, and it is always the same dreadful song:</p>
 <blockquote class="poem">
-<p>
-“Avast belay, yo ho, heave to,<br/>
+<p>“Avast belay, yo ho, heave to,<br/>
 A-pirating we go,<br/>
 And if we’re parted by a shot<br/>
-We’re sure to meet below!”
-</p>
+We’re sure to meet below!”</p>
 </blockquote>
 <p>A more villainous-looking lot never hung in a row on Execution dock.
 Here, a little in advance, ever and again with his head to the
@@ -1445,12 +1443,10 @@ mother one.”</p>
 things of the woods, would have heard nothing, but they heard it, and it
 was the grim song:</p>
 <blockquote class="poem">
-<p>
-“Yo ho, yo ho, the pirate life,<br/>
+<p>“Yo ho, yo ho, the pirate life,<br/>
 The flag o’ skull and bones,<br/>
 A merry hour, a hempen rope,<br/>
-And hey for Davy Jones.”
-</p>
+And hey for Davy Jones.”</p>
 </blockquote>
 <p>At once the lost boys—but where are they? They are no longer there.
 Rabbits could not have disappeared more quickly.</p>
@@ -1550,12 +1546,10 @@ but honest laughter. “Aha, they will die.”</p>
 <p>“It’s the wickedest, prettiest policy ever I heard of!” he cried, and in
 their exultation they danced and sang:</p>
 <blockquote class="poem">
-<p>
-“Avast, belay, when I appear,<br/>
+<p>“Avast, belay, when I appear,<br/>
 By fear they’re overtook;<br/>
 Nought’s left upon your bones when you<br/>
-Have shaken claws with Hook.”
-</p>
+Have shaken claws with Hook.”</p>
 </blockquote>
 <p>They began the verse, but they never finished it, for another sound
 broke in and stilled them. There was at first such a tiny sound that a
@@ -1783,33 +1777,27 @@ lovely!”</p>
 the kind of house you would like to have.”</p>
 <p>Immediately, without opening her eyes, Wendy began to sing:</p>
 <blockquote class="poem">
-<p>
-“I wish I had a pretty house,<br/>
+<p>“I wish I had a pretty house,<br/>
 The littlest ever seen,<br/>
 With funny little red walls<br/>
-And roof of mossy green.”
-</p>
+And roof of mossy green.”</p>
 </blockquote>
 <p>They gurgled with joy at this, for by the greatest good luck the
 branches they had brought were sticky with red sap, and all the ground
 was carpeted with moss. As they rattled up the little house they broke
 into song themselves:</p>
 <blockquote class="poem">
-<p>
-“We’ve built the little walls and roof<br/>
+<p>“We’ve built the little walls and roof<br/>
 And made a lovely door,<br/>
 So tell us, mother Wendy,<br/>
-What are you wanting more?”
-</p>
+What are you wanting more?”</p>
 </blockquote>
 <p>To this she answered greedily:</p>
 <blockquote class="poem">
-<p>
-“Oh, really next I think I’ll have<br/>
+<p>“Oh, really next I think I’ll have<br/>
 Gay windows all about,<br/>
 With roses peeping in, you know,<br/>
-And babies peeping out.”
-</p>
+And babies peeping out.”</p>
 </blockquote>
 <p>With a blow of their fists they made windows, and large yellow leaves
 were the blinds. But roses—?</p>
@@ -1818,12 +1806,10 @@ were the blinds. But roses—?</p>
 <p>Babies?</p>
 <p>To prevent Peter ordering babies they hurried into song again:</p>
 <blockquote class="poem">
-<p>
-“We’ve made the roses peeping out,<br/>
+<p>“We’ve made the roses peeping out,<br/>
 The babes are at the door,<br/>
 We cannot make ourselves, you know,<br/>
-’cos we’ve been made before.”
-</p>
+’cos we’ve been made before.”</p>
 </blockquote>
 <p>Peter, seeing this to be a good idea, at once pretended that it was his
 own. The house was quite beautiful, and no doubt Wendy was very cosy
@@ -3684,12 +3670,10 @@ and he drew himself up firmly to his full height.</p>
 than ever because they had seen him unbend. He broke into the villainous
 ditty:</p>
 <blockquote class="poem">
-<p>
-“Yo ho, yo ho, the frisky plank,<br/>
+<p>“Yo ho, yo ho, the frisky plank,<br/>
 You walks along it so,<br/>
 Till it goes down and you goes down<br/>
-To Davy Jones below!”
-</p>
+To Davy Jones below!”</p>
 </blockquote>
 <p>To terrorize the prisoners the more, though with a certain loss of
 dignity, he danced along an imaginary plank, grimacing at them as he
