--- a/text/The_Picture_of_Dorian_Gray.html
+++ b/text/The_Picture_of_Dorian_Gray.html
@@ -685,8 +685,7 @@ We can forgive a man for making a useful thing as long as he does not admire it.
 <p>The scene was the hall of Capulet’s house, and Romeo in his pilgrim’s dress had entered with Mercutio and his other friends. The band, such as it was, struck up a few bars of music, and the dance began. Through the crowd of ungainly, shabbily-dressed actors, Sibyl Vane moved like a creature from a finer world. Her body swayed, while she danced, as a plant sways in the water. The curves of her throat were the curves of a white lily. Her hands seemed to be made of cool ivory.</p>
 <p>Yet she was curiously listless. She showed no sign of joy when her eyes rested on Romeo. The few words she had to speak—</p>
 <blockquote class="poem">
-<p>
-<span class="line">Good pilgrim, you do wrong your hand too much,</span>
+<p><span class="line">Good pilgrim, you do wrong your hand too much,</span>
 <span class="line">Which mannerly devotion shows in this;</span>
 <span class="line">For saints have hands that pilgrims’ hands do touch,</span>
 <span class="line">And palm to palm is holy palmers’ kiss—</span>
@@ -697,16 +696,14 @@ We can forgive a man for making a useful thing as long as he does not admire it.
 <p>Yet they felt that the true test of any Juliet is the balcony scene of the second act. They waited for that. If she failed there, there was nothing in her.</p>
 <p>She looked charming as she came out in the moonlight. That could not be denied. But the staginess of her acting was unbearable, and grew worse as she went on. Her gestures became absurdly artificial. She over-emphasised everything that she had to say. The beautiful passage—</p>
 <blockquote class="poem">
-<p>
-<span class="line">Thou knowest the mask of night is on my face,</span>
+<p><span class="line">Thou knowest the mask of night is on my face,</span>
 <span class="line">Else would a maiden blush bepaint my cheek</span>
 <span class="line">For that which thou hast heard me speak to-night—</span>
 </p>
 </blockquote>
 <p>was declaimed with the painful precision of a schoolgirl who has been taught to recite by some second-rate professor of elocution. When she leaned over the balcony and came to those wonderful lines—</p>
 <blockquote class="poem">
-<p>
-<span class="line" style="margin-left: 7em;">Although I joy in thee,</span>
+<p><span class="line" style="margin-left: 7em;">Although I joy in thee,</span>
 <span class="line">I have no joy of this contract to-night:</span>
 <span class="line">It is too rash, too unadvised, too sudden;</span>
 <span class="line">Too like the lightning, which doth cease to be</span>
