--- a/text/The_War_of_the_Worlds.html
+++ b/text/The_War_of_the_Worlds.html
@@ -5,8 +5,7 @@
 </header>
 <section class="preface">
 <blockquote>
-<p>
-But who shall dwell in these worlds if they be inhabited?<br/>
+<p>But who shall dwell in these worlds if they be inhabited?<br/>
 Are we or they lords of the world?…<br/>
 And how are all things made for man?
 </p>
