fix some quotes

--- a/text/Moby-Dick.html
+++ b/text/Moby-Dick.html
@@ -254,13 +254,13 @@ Sebond.</cite></p>
 <p>“Let us fly, let us fly! Old Nick take me if is not Leviathan described
 by the noble prophet Moses in the life of patient Job.” <cite>—Rabelais</cite>.</p>
 <p>“This whale’s liver was two cartloads.” <cite>—Stowe’s Annals</cite>.</p>
-<p>“The great Leviathan that maketh the seas to seethe like boiling pan."
+<p>“The great Leviathan that maketh the seas to seethe like boiling pan.”
 <cite>—Lord Bacon’s version of the Psalms</cite>.</p>
 <p>“Touching that monstrous bulk of the whale or ork we have received
 nothing certain. They grow exceeding fat, insomuch that an incredible
 quantity of oil will be extracted out of one whale.” <cite>—Ibid. “History of
 Life and Death.”</cite></p>
-<p>“The sovereignest thing on earth is parmacetti for an inward bruise."
+<p>“The sovereignest thing on earth is parmacetti for an inward bruise.”
 <cite>—King Henry</cite>.</p>
 <p>“Very like a whale.” <cite>—Hamlet</cite>.</p>
 <blockquote class="fixed">
@@ -268,21 +268,21 @@ Life and Death.”</cite></p>
 Mote him availle, but to returne againe
 To his wound’s worker, that with lowly dart,
 Dinting his breast, had bred his restless paine,
-Like as the wounded whale to shore flies thro’ the maine."</pre>
+Like as the wounded whale to shore flies thro’ the maine.”</pre>
   <p class="source"><cite>—The Faerie Queen</cite>.</p>
 </blockquote>
 <p>“Immense as whales, the motion of whose vast bodies can in a peaceful
 calm trouble the ocean til it boil.” <cite>—Sir William Davenant. Preface to
 Gondibert.</cite></p>
 <p>“What spermacetti is, men might justly doubt, since the learned
-Hosmannus in his work of thirty years, saith plainly, Nescio quid sit."
+Hosmannus in his work of thirty years, saith plainly, Nescio quid sit.”
 <cite>—Sir T. Browne. Of Sperma Ceti and the Sperma Ceti Whale. Vide his V. E.</cite></p>
 <blockquote class="fixed">
   <pre> “Like Spencer’s Talus with his modern flail
   He threatens ruin with his ponderous tail.
 ...
   Their fixed jav’lins in his side he wears,
-  And on his back a grove of pikes appears."</pre>
+  And on his back a grove of pikes appears.”</pre>
   <p class="source"><cite>—Waller’s Battle of the Summer Islands.</cite></p>
 </blockquote>
 <p>“By art is created that great Leviathan, called a Commonwealth or
@@ -308,7 +308,7 @@ swimming in them.” <cite>—Fuller’s Profane and Holy State</cite>.</p>
   <pre>“So close behind some promontory lie
 The huge Leviathan to attend their prey,
 And give no chance, but swallow in the fry,
-Which through their gaping jaws mistake the way."
+Which through their gaping jaws mistake the way.”
 <cite>—Dryden’s Annus Mirabilis</cite>.</pre>
 </blockquote>
 <p>“While the whale is floating at the stern of the ship, they cut off his
@@ -333,7 +333,7 @@ Greenland, A.D. 1671 Harris Coll.</cite></p>
 <p>“Several whales have come in upon this coast (Fife) Anno 1652, one
 eighty feet in length of the whale-bone kind came in, which (as I was
 informed), besides a vast quantity of oil, did afford 500 weight of
-baleen. The jaws of it stand for a gate in the garden of Pitferren."
+baleen. The jaws of it stand for a gate in the garden of Pitferren.”
 <cite>—Sibbald’s Fife and Kinross</cite>.</p>
 <p>“Myself have agreed to try whether I can master and kill this
 Sperma-ceti whale, for I could never hear of any of that sort that was
@@ -350,7 +350,7 @@ South America.</cite></p>
   <pre>“To fifty chosen sylphs of special note,
 We trust the important charge, the petticoat.
 Oft have we known that seven-fold fence to fail,
-Tho’ stuffed with hoops and armed with ribs of whale."
+Tho’ stuffed with hoops and armed with ribs of whale.”
 <cite>—Rape of the Lock</cite>.</pre>
 </blockquote>
 <p>“If we compare land animals in respect to magnitude, with those
@@ -370,7 +370,7 @@ and some other articles of the same nature in their boats, in order to
 terrify and prevent their too near approach.” <cite>—Uno von Troil’s Letters
 on Banks’s and Solander’s Voyage to Iceland in 1772.</cite></p>
 <p>“The Spermacetti Whale found by the Nantuckois, is an active, fierce
-animal, and requires vast address and boldness in the fishermen."
+animal, and requires vast address and boldness in the fishermen.”
 <cite>—Thomas Jefferson’s Whale Memorial to the French Minister in 1778.</cite></p>
 <p>“And pray, sir, what in the world is equal to it?” <cite>—Edmund Burke’s
 Reference in Parliament to the Nantucket Whale-Fishery.</cite></p>
@@ -384,7 +384,7 @@ property of the king.” <cite>—Blackstone</cite>.</p>
 <blockquote class="fixed">
   <pre>“Soon to the sport of death the crews repair:
 Rodmond unerring o’er his head suspends
-The barbed steel, and every turn attends."
+The barbed steel, and every turn attends.”
 <cite>—Falconer’s Shipwreck</cite>.</pre>
 </blockquote>
 <blockquote class="fixed">
@@ -408,7 +408,7 @@ through that pipe is inferior in impetus and velocity to the blood
 gushing from the whale’s heart.” <cite>—Paley’s Theology</cite>.</p>
 <p>“The whale is a mammiferous animal without hind feet.” <cite>—Baron Cuvier</cite>.</p>
 <p>“In 40 degrees south, we saw Spermacetti Whales, but did not take
-any till the first of May, the sea being then covered with them."
+any till the first of May, the sea being then covered with them.”
 <cite>—Colnett’s Voyage for the Purpose of Extending the Spermaceti Whale
 Fishery.</cite></p>
 <blockquote class="fixed">
@@ -423,7 +423,7 @@ Led by mysterious instincts through that waste
 And trackless region, though on every side
 Assaulted by voracious enemies,
 Whales, sharks, and monsters, arm’d in front or jaw,
-With swords, saws, spiral horns, or hooked fangs."
+With swords, saws, spiral horns, or hooked fangs.”
 <cite>—Montgomery’s World before the Flood</cite>.</pre>
 </blockquote>
 <blockquote class="fixed">
@@ -432,7 +432,7 @@ To the finny people’s king.
 Not a mightier whale than this
 In the vast Atlantic is;
 Not a fatter fish than he,
-Flounders round the Polar Sea."
+Flounders round the Polar Sea.”
 <cite>—Charles Lamb’s Triumph of the Whale</cite>.</pre>
 </blockquote>
 <p>“In the year 1690 some persons were on a high hill observing the
@@ -460,14 +460,14 @@ Said Vessel. New York, 1821.</cite></p>
 The wind was piping free;
 Now bright, now dimmed, was the moonlight pale,
 And the phospher gleamed in the wake of the whale,
-As it floundered in the sea."
+As it floundered in the sea.”
 <cite>—Elizabeth Oakes Smith</cite>.</pre>
 </blockquote>
 <p>“The quantity of line withdrawn from the boats engaged in the capture
 of this one whale, amounted altogether to 10,440 yards or nearly six
 English miles....</p>
 <p>“Sometimes the whale shakes its tremendous tail in the air, which,
-cracking like a whip, resounds to the distance of three or four miles."
+cracking like a whip, resounds to the distance of three or four miles.”
 <cite>—Scoresby</cite>.</p>
 <p>“Mad with the agonies he endures from these fresh attacks, the
 infuriated Sperm Whale rolls over and over; he rears his enormous head,
@@ -479,29 +479,29 @@ and, in a commercial point of view, so important an animal (as the Sperm
 Whale) should have been so entirely neglected, or should have excited
 so little curiosity among the numerous, and many of them competent
 observers, that of late years, must have possessed the most abundant
-and the most convenient opportunities of witnessing their habitudes."
+and the most convenient opportunities of witnessing their habitudes.”
 <cite>—Thomas Beale’s History of the Sperm Whale, 1839.</cite></p>
 <p>“The Cachalot” (Sperm Whale) “is not only better armed than the True
 Whale” (Greenland or Right Whale) “in possessing a formidable weapon
 at either extremity of its body, but also more frequently displays a
 disposition to employ these weapons offensively and in manner at once so
 artful, bold, and mischievous, as to lead to its being regarded as the
-most dangerous to attack of all the known species of the whale tribe."
+most dangerous to attack of all the known species of the whale tribe.”
 <cite>—Frederick Debell Bennett’s Whaling Voyage Round the Globe, 1840.</cite></p>
 <blockquote class="fixed">
   <pre>October 13.  “There she blows,” was sung out from the mast-head.
 “Where away?” demanded the captain.
-“Three points off the lee bow, sir."
-“Raise up your wheel.  Steady!”  “Steady, sir."
-“Mast-head ahoy!  Do you see that whale now?"
+“Three points off the lee bow, sir.”
+“Raise up your wheel.  Steady!”  “Steady, sir.”
+“Mast-head ahoy!  Do you see that whale now?”
 “Ay ay, sir!  A shoal of Sperm Whales!  There she blows!  There she
-breaches!"
-“Sing out! sing out every time!"
+breaches!”
+“Sing out! sing out every time!”
 “Ay Ay, sir!  There she blows! there—there—<strong>thar</strong> she
-blows—bowes—bo-o-os!"
-“How far off?"
-“Two miles and a half."
-“Thunder and lightning! so near!  Call all hands."
+blows—bowes—bo-o-os!”
+“How far off?”
+“Two miles and a half.”
+“Thunder and lightning! so near!  Call all hands.”
 <cite>—J. Ross Browne’s Etchings of a Whaling Cruize. 1846.</cite></pre>
 </blockquote>
 <p>“The Whale-ship Globe, on board of which vessel occurred the horrid
@@ -516,10 +516,10 @@ Journal of Tyerman and Bennett.</cite></p>
 <p>“Nantucket itself,” said Mr. Webster, “is a very striking and peculiar
 portion of the National interest. There is a population of eight or nine
 thousand persons living here in the sea, adding largely every year
-to the National wealth by the boldest and most persevering industry."
+to the National wealth by the boldest and most persevering industry.”
 <cite>—Report of Daniel Webster’s Speech in the U. S. Senate, On the
 Application for the Erection of a Breakwater at Nantucket. 1828.</cite></p>
-<p>“The whale fell directly over him, and probably killed him in a moment."
+<p>“The whale fell directly over him, and probably killed him in a moment.”
 <cite>—“The Whale and his Captors, Or the Whaleman’s Adventures and the
 Whale’s Biography, Gathered on the Homeward Cruise of the Commodore
 Preble.” by Rev. Henry T. Cheever.</cite></p>
@@ -528,7 +528,7 @@ you to hell.” <cite>—Life of Samuel Comstock (the Mutineer), by his brother,
 William Comstock. Another version of the Whale-Ship Globe narrative.</cite></p>
 <p>“The voyages of the Dutch and English to the Northern Ocean, in order,
 if possible, to discover a passage through it to India, though they
-failed of their main object, laid-open the haunts of the whale."
+failed of their main object, laid-open the haunts of the whale.”
 <cite>—McCulloch’s Commercial Dictionary.</cite></p>
 <p>“These things are reciprocal; the ball rebounds, only to bound forward
 again; for now in laying open the haunts of the whale, the whalemen seem
@@ -563,7 +563,7 @@ throw of the shore” (Terra Del Fuego), “over which the beech tree
 extended its branches.” <cite>—Darwin’s Voyage of a Naturalist.</cite></p>
 <p>“‘Stern all!’ exclaimed the mate, as upon turning his head, he saw the
 distended jaws of a large Sperm Whale close to the head of the boat,
-threatening it with instant destruction;—‘Stern all, for your lives!’"
+threatening it with instant destruction;—‘Stern all, for your lives!’”
 <cite>—Wharton the Whale Killer.</cite></p>
 <p>“So be cheery, my lads, let your hearts never fail, While the bold
 harpooneer is striking the whale!” <cite>—Nantucket Song.</cite></p>
@@ -571,7 +571,7 @@ harpooneer is striking the whale!” <cite>—Nantucket Song.</cite></p>
   <pre>“Oh, the rare old Whale, mid storm and gale
 In his ocean home will be
 A giant in might, where might is right,
-And King of the boundless sea."
+And King of the boundless sea.”
 <cite>—Whale Song.</cite></pre>
 </blockquote>
 </section>
