--- a/src/colophon.html
+++ b/src/colophon.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="../static/ebook.css">
+    <link rel="stylesheet" href="../docs/static/ebook.css">
   </head>
   <body>
     <article class="book">
